# FFmpeg-Screen-Recorder

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md
.github/workflows/: ci-version.yml  ci.yml
src/: cli.rs  lib.rs  main.rs  position.rs  resolution.rs  window_info.rs
