[package]
name = "ffmpeg-screen-recorder"
version = "1.0.18"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
rust-version = "1.59"
repository = "https://github.com/magiclen/FFmpeg-Screen-Recorder"
homepage = "https://magiclen.org/ffmpeg-screen-recorder"
keywords = ["ffmpeg", "cli", "screenrecord"]
categories = ["command-line-utilities"]
description = "This program is a gadget which helps you use FFmpeg to record your screen on Linux. The video record can be saved as a file, or be streamed via RTMP protocol."
readme = "README.md"
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
clap = "3.2.23"
terminal_size = "0.2"

execute = "0.2.4"
num_cpus = "1.8.0"
chrono = "0.4.4"
nix = "0.26"
