[package]
name = "ffmpeg-screen-recorder"
version = "1.0.21"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
rust-version = "1.70"
repository = "https://github.com/magiclen/FFmpeg-Screen-Recorder"
homepage = "https://magiclen.org/ffmpeg-screen-recorder"
keywords = ["ffmpeg", "cli", "screenrecord"]
categories = ["command-line-utilities"]
description = "This program is a gadget which helps you use FFmpeg to record your screen on Linux. The video record can be saved as a file, or be streamed via RTMP protocol."
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
clap = { version = "4", features = ["derive"] }
concat-with = "0.2"
terminal_size = "0.3"

anyhow = "1"

execute = "0.2"
num_cpus = "1"
chrono = "0.4"
nix = { version = "0.27", features = ["signal"] }
